# hoistscout

./: .coderabbit.yaml  .dockerignore  .env.example  .env.production  .env.production.template  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHENTICATION_ISSUE.md  CHANGELOG.md  CI-DEBUG-GUIDE.md  CI-MONITORING-GUIDE.md  CI-VALIDATION-README.md  CI_FAILURES_REPORT.md  CLAUDE.md  CLEANUP_REPORT.md  CONTRIBUTING.md  CREATE_GITHUB_REPO.md  CRITICAL-FIX-READY.md  CURRENT_STATUS_UPDATE.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FINAL_STATUS.md  DEPLOYMENT_FIX.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_REPORT.md  DEPLOYMENT_TEST_REPORT.md  DEPLOYMENT_UPDATE.md  DEPLOY_OLLAMA_ON_RENDER.md  Dockerfile.hoistscout-api  Dockerfile.hoistscout-api-minimal  Dockerfile.hoistscout-api-safe  Dockerfile.hoistscout-frontend  Dockerfile.hoistscout-worker  Dockerfile.test  E2E_TEST_REPORT.md  FINAL_STATUS_REPORT.md  FRONTEND_INVESTIGATION_REPORT.md  (+144 more)
.archive/: API_DEBUGGING_GUIDE.md  BULLETPROOF_DEPLOYMENT_GUIDE.md  COMPREHENSIVE_TEST_REPORT.md  CURRENT_STATUS.md  DASHBOARD_FIX_SUMMARY.md  DEBUGGING_API_ISSUES.md  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  FINAL_PRODUCTION_TASKS.md  GET_IT_WORKING.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PRODUCTION_ALIGNMENT_REPORT.md  PRODUCTION_PLAN.md  PRODUCTION_READINESS_SUMMARY.md  PRODUCTION_SUMMARY.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_DEPLOYMENT_CHECKLIST.md  TEST_COMPLETION_SUMMARY.md  TEST_VALIDATION_SUMMARY.md  check_render_logs.md  check_render_status.py  debug_jwt_issue.py  deploy_production.sh  deploy_quick_fix.sh  final_jwt_debug.py  test_api.sh  test_api_auth.py  test_auth_detailed.py  test_database.py  test_deployment_local.py  test_redirects.sh  test_trailing_slash.py  test_ui_integration.py  verify_deployment.sh
.github/: commitlint.yml
backend/: .env.example  DB_QUEUE_README.md  Dockerfile  Dockerfile.fix  Dockerfile.simple  Dockerfile.worker  Dockerfile.worker.fixed  README.md  REDIS_HEALTH_ENDPOINT.md  REDIS_QUEUE_CHECKER.md  api_entrypoint.sh  australian_grants.csv  check_prod_redis.py  comprehensive_test.py  conftest.py  db.py  debug_redis.py  debug_worker.py  delete_all_sites.py  enhanced_worker.py  fix_auth_endpoint.py  fix_deployment.sh  import_australian_grants.py  import_csv.py  main.py  master.csv  minimal_debug_worker.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_worker.py  simple_worker.py  sites.yml  start_with_db_queue.sh  start_worker.py  test_celery_connection.py  test_celery_direct.py  test_db_queue.py  test_direct_task.py  (+13 more)
backend/app/: __init__.py  config.py  database.py  db_queue.py  db_worker.py  deployment_check.py  main.py  worker.py  worker.py.backup.20250709_191624  worker_fixed.py
backend/app/api/: __init__.py  auth.py  health.py  jobs.py  jobs_db.py  opportunities.py  websites.py
backend/app/core/: __init__.py  anti_detection.py  auth_manager.py  compliance_checker.py  credential_manager.py  demo_scraper.py  gemini_scraper.py  health_checks.py  logging.py  pagination.py  pdf_processor.py  scraper.py  scraper_integration.py  scraper_with_ollama.py  simple_logging.py
backend/app/models/: __init__.py  audit.py  base.py  job.py  opportunity.py  user.py  website.py
backend/app/schemas/: auth.py  document.py  job.py  opportunity.py  scraping.py  website.py
backend/app/utils/: __init__.py  auth.py  auth_dependencies.py  auth_fix.py  demo_user.py
backend/cli/: __init__.py  import_csv.py
backend/hoistscraper/: __init__.py  api_optimized.py  db.py  db_optimized.py  db_safe.py  ingest.py  logging_config.py  main.py  main_minimal.py  main_safe.py  middleware.py  models.py  models_credentials.py  models_optimized.py  monitoring.py  performance_optimizations.py  queue.py  security.py  simple_queue.py  validation.py  worker.py  worker_optimized.py  worker_standalone.py  worker_startup.py  worker_v2.py
backend/hoistscraper/auth/: __init__.py  api_auth.py  credential_manager.py
backend/hoistscraper/crawler/: __init__.py  base.py  config.py  example_config.yaml  site_crawler.py
backend/hoistscraper/extractor/: __init__.py  llm_extractor.py  ollama_extractor.py  schemas.py
backend/hoistscraper/routers/: __init__.py  admin.py  credentials.py  debug.py
backend/routers/: __init__.py  ingest.py  jobs.py  sites.py
backend/scripts/: __init__.py  cron_hook.py  registry.py  run_crawl.py
backend/tests/: __init__.py  conftest.py  test_anti_detection_performance.py  test_api_endpoints.py  test_auth_security.py  test_basic.py  test_db.py  test_health.py  test_ingest.py  test_logging.py  test_queue.py  test_results_api.py  test_results_api_unit.py  test_results_endpoint.py  test_worker.py
backend/tests/e2e/: test_real_world_scraping.py
backend/tests/fixtures/: mini_sites.csv
docs/: API_DOCUMENTATION_SECURED.md  BACKUP_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX.md  DEPLOYMENT_MONITORING.md  PRD.md  PRODUCTION_TESTING_CHECKLIST.md  RENDER_DEPLOYMENT_CHECKLIST.md  RENDER_ENV_SETUP.md  SECURITY.md  SECURITY_FIXES.md  TESTING_STRATEGY.md  UI_REQUIREMENTS.md  UPDATE_GEMINI_API_KEY.md  USER_AUTH_DESIGN.md  architecture.md  master-prd-v2.md  master-prd.md  task-breakdown.md
e2e/: test_flow.spec.ts
frontend/: CLAUDE.md  Dockerfile  Dockerfile.fixed  Dockerfile.simple  next.config.js  next.config.optimized.js  package-lock.json  package.json  postcss.config.js  server.js  tsconfig.json  vitest.config.ts
hoistscout/: README.md  render.yaml
monitoring/: README.md  alertmanager.yml  prometheus-alerts.yml  prometheus.yml
nginx/: nginx-dev.conf  nginx-ssl.conf  nginx.conf
ollama/: Dockerfile
ollama-proxy/: Dockerfile  Dockerfile.root-context  README.md  app.py  build.sh  requirements.txt
playwright-report/: index.html
public/: index.html
redis/: Dockerfile
scripts/: DEBUG_WORKER_README.md  MONITOR_DASHBOARD_README.md  UPSTASH_REDIS_SETUP.md  (+51 more)
(+106 files in other folders)
