[tool.poetry]
name = "hoistscout"
version = "0.1.0"
description = "Self-learning tender scraping system"
authors = ["HoistScout Team"]
readme = "README.md"
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
# Core scraping with anti-detection
scrapegraphai = {extras = ["all"], version = "^0.15.0"}
unstructured = {extras = ["all"], version = "^0.11.0"}
2captcha-python = "^1.1.3"
undetected-chromedriver = "^3.5.0"
playwright = "^1.41.0"

# API and database
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
minio = "^7.2.0"

# Background processing
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.1"
asyncio-throttle = "^1.0.2"

# Data processing
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cryptography = "^41.0.7"

# Utilities
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
loguru = "^0.7.2"
httpx = "^0.26.0"
fake-useragent = "^1.5.1"

# LLM
ollama = "^0.1.7"

# Monitoring
prometheus-client = "^0.19.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.40.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.14"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT", "Q"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]