[tool.poetry]
name = "hoistscraper-backend"
version = "0.1.0"
description = "FastAPI backend with Playwright crawler and extractor"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "hoistscraper"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
playwright = "^1.52.0"
playwright-stealth = "^1.0"
uvicorn = {extras = ["standard"], version = "^0.29"}
beautifulsoup4 = "^4.12"
httpx = "^0.27"
tenacity = "^8.2"
# firecrawl-py = "0.0.6"  # Removed - using BeautifulSoup instead
# ollama = "^0.1.7"  # Removed - not needed without firecrawl
sqlmodel = "^0.0.16"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"
pandas = "^2.0.0"
chardet = "^5.0.0"
rq = "^1.16.0"
redis = "^5.0.0"
fakeredis = "^2.21.0"
setuptools = "^68.0.0"  # Pinned to avoid pkg_resources deprecation warning
cryptography = "^42.0.0"
loguru = "^0.7.0"
python-dateutil = "^2.9.0"
prometheus-client = "^0.20.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-playwright = "^0.4"
pytest-cov = "^4.1"
ruff = "^0.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 