[tool.poetry]
name = "hoistscout"
version = "0.1.0"
description = "Enterprise tender and grant scraping platform"
authors = ["HoistScout Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
redis = "^5.0.1"
celery = {extras = ["redis"], version = "^5.3.4"}
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.2"
lxml = "^5.3.0"
selenium = "^4.15.2"
playwright = "^1.40.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
structlog = "^23.2.0"
prometheus-fastapi-instrumentator = "^6.1.0"
pytesseract = "^0.3.10"
pypdf2 = "^3.0.1"
pdf2image = "^1.16.3"
python-magic = "^0.4.27"
cryptography = "^41.0.7"
minio = "^7.2.0"
unstructured = "^0.11.0"
loguru = "^0.7.2"
fake-useragent = "^1.4.0"
python-anticaptcha = "^1.0.0"
undetected-chromedriver = "^3.5.4"
asyncio-throttle = "^1.0.2"
scrapegraphai = {version = "^1.60.0", optional = true}

[tool.poetry.extras]
ai = ["scrapegraphai"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"
pre-commit = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true